work on first project

--- a/PassiveFrontend/src/app/app.component.html
+++ b/PassiveFrontend/src/app/app.component.html
@@ -1,1 +1,7 @@
-<router-outlet></router-outlet>
+<div class="body">
+  <app-header></app-header>
+  <app-navigation></app-navigation>
+  <div class="content">
+    <router-outlet></router-outlet>
+  </div>
+</div>
