--- a/PassiveFrontend/src/app/pages/homepage/homepage.component.html
+++ b/PassiveFrontend/src/app/pages/homepage/homepage.component.html
@@ -26,4 +26,13 @@
       </div>
     </div>
   </ng-template>
-  
+  <div class="form-inline">
+    <button
+      class="btn btn-outline-success my-2 my-sm-0"
+      type="button"
+      *ngIf="authService.user$ | async as user"
+      (click)="logout()"
+    >
+      Logout
+    </button>
+  </div>
