--- a/PassiveFrontend/src/app/pages/login/login.component.scss
+++ b/PassiveFrontend/src/app/pages/login/login.component.scss
@@ -91,3 +91,19 @@
     }
   }
   
+  .bg-transparent {
+    background-color: transparent;
+  }
+  
+  :host {
+    height: 100%;
+  }
+  
+  .photo {
+    object-fit: contain;
+  }
+  
+  .card {
+    width: 20rem;
+    margin: 0 auto;
+  }
