--- a/PassiveFrontend/src/app/pages/homepage/homepage.component.html
+++ b/PassiveFrontend/src/app/pages/homepage/homepage.component.html
@@ -1,39 +1,42 @@
 <app-banners></app-banners>
-<p style="text-align:center"> Front page text</p>
+<p style="text-align: center">Front page text</p>
 
 <section class="container">
-    <div class="card mt-4 shadow" *ngIf="authService.user$ | async as user; else login">
-      <h4 class="card-header">Hi {{ user.username }},</h4>
-      <div class="card-body">
-        <div class="m-2">
-          <h6>Your access token is</h6>
-          {{ accessToken }}
-        </div>
-        <div class="m-2">
-          <h6>Your refresh token is</h6>
-          {{ refreshToken }}
-        </div>
+  <div
+    class="card mt-4 shadow"
+    *ngIf="authService.user$ | async as user; else login"
+  >
+    <h4 class="card-header">Hi {{ user.username }},</h4>
+    <div class="card-body">
+      <div class="m-2">
+        <h6>Your access token is</h6>
+        {{ accessToken }}
+      </div>
+      <div class="m-2">
+        <h6>Your refresh token is</h6>
+        {{ refreshToken }}
       </div>
     </div>
-  </section>
-  <ng-template #login>
-    <div class="card mt-4 shadow">
-      <h4 class="card-header">You have been logged out</h4>
-      <div class="card-body">
-        <div class="m-2">
-          Please click <a routerLink="/Login">here</a> to login.
-        </div>
-      </div>
-    </div>
-  </ng-template>
-  
-  <div class="form-inline">
-    <button
-      class="btn btn-outline-success my-2 my-sm-0"
-      type="button"
-      *ngIf="authService.user$ | async as user"
-      (click)="logout()"
-    >
-      Logout
-    </button>
   </div>
+</section>
+<ng-template #login>
+  <div class="card mt-4 shadow">
+    <h4 class="card-header">You have been logged out</h4>
+    <div class="card-body">
+      <div class="m-2">
+        Please click <a routerLink="/Login">here</a> to login.
+      </div>
+    </div>
+  </div>
+</ng-template>
+
+<div class="form-inline">
+  <button
+    class="btn btn-outline-success my-2 my-sm-0"
+    type="button"
+    *ngIf="authService.user$ | async as user"
+    (click)="logout()"
+  >
+    Logout
+  </button>
+</div>
