--- a/PassiveFrontend/src/app/pages/login/login.component.html
+++ b/PassiveFrontend/src/app/pages/login/login.component.html
@@ -30,7 +30,7 @@
 </div>
 
 
-<div class="jumbotron bg-transparent text-center">
+<!-- <div class="jumbotron bg-transparent text-center">
   <p> Or login via one of these social sites</p>
   <div *ngIf="!user" class="card text-center">
     <h6 class="card-header">
@@ -64,4 +64,4 @@
       <button class="btn btn-danger" (click)="signOut()">Sign out</button>
     </div>
   </div>
-</div>
+</div> -->
