--- a/PassiveFrontend/src/app/pages/homepage/homepage.component.html
+++ b/PassiveFrontend/src/app/pages/homepage/homepage.component.html
@@ -1,1 +1,7 @@
-<p> test</p>
+<app-banners></app-banners>
+<div class="p-4">
+    <div class="container">
+        <h1>Hi {{account.firstName}}!</h1>
+        <p>You're logged in with Angular 10 & JWT!!</p>
+    </div>
+</div>
